# logos-forum-lp0016

./: .forum-state.local  .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  SUBMISSION-AUDIT.md  forum-registry-b-idl.json  forum-registry-idl.json  rust-toolchain.toml  spel.toml
.github/workflows/: ci.yml  release.yml
deploy/railway/: .dockerignore  Dockerfile  README.md  entrypoint.sh  railway.toml
docs/: protocol.md
examples/: Cargo.toml
forum_core/: Cargo.toml
forum_core/src/: lib.rs
forum_moderation/: Cargo.toml
forum_moderation/src/: certificate.rs  commitment.rs  domain.rs  hash.rs  identity.rs  lib.rs  merkle.rs  scalar.rs  shamir.rs  slash.rs  threshold_elgamal.rs
forum_moderation/tests/: full_lifecycle.rs  lifecycle.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
scripts/: demo.sh  full-stack-setup.sh  lifecycle-helper.sh
scripts/deploy/: create-instance.sh  deploy-program.sh
ui/: CMakeLists.txt  flake.nix  manifest.json  metadata.json
ui/ffi/: Cargo.toml
ui/ffi/src/: lib.rs
ui/qml/: Main.qml
ui/src/: ForumBackend.cpp  ForumBackend.h  ForumPlugin.cpp  ForumPlugin.h  main.cpp
