[workspace]
members = [
    "forum_core",
    "forum_moderation",
    "methods",
    "examples",
]
exclude = [
    "methods/guest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anonymous/logos-forum"

[workspace.dependencies]
# Pinned to match logos-execution-zone v0.2.0-rc3 / SPEL v0.2.0.
risc0-zkvm = { version = "=3.0.5", default-features = false }
risc0-build = "=3.0.5"
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
spel-framework = { git = "https://github.com/logos-co/spel.git", tag = "v0.2.0" }

# Crypto.
k256 = { version = "=0.13.4", default-features = false, features = ["ecdsa", "arithmetic", "schnorr"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
zeroize = { version = "1.7", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
subtle = { version = "2.5", default-features = false }
anyhow = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
