[package]
name = "forum_examples"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "encode_create_instance"
path = "src/bin/encode_create_instance.rs"

[[bin]]
name = "measure_post_proof"
path = "src/bin/measure_post_proof.rs"
required-features = ["with-proof"]

[features]
default = []
with-proof = ["dep:risc0-zkvm", "dep:forum-methods", "dep:bincode"]

[dependencies]
forum_core = { path = "../forum_core" }
forum_moderation = { path = "../forum_moderation" }
borsh = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["std"] }
k256 = { workspace = true, features = ["arithmetic", "schnorr", "std"] }
rand_core = { workspace = true, features = ["getrandom"] }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true, features = ["std"] }
anyhow.workspace = true
risc0-zkvm    = { workspace = true, default-features = false, features = ["std", "client"], optional = true }
forum-methods = { path = "../methods", optional = true }
bincode       = { version = "1.3", optional = true }
