[package]
name = "forum-methods"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = { workspace = true }

[dependencies]
risc0-zkvm = { workspace = true, features = ["std"] }
forum_core = { path = "../forum_core" }
