[package]
name = "forum-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "forum_registry"
path = "src/bin/forum_registry.rs"

[[bin]]
name = "forum_post_proof"
path = "src/bin/forum_post_proof.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "refs/heads/main" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
ruint = "=1.17.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
k256 = { version = "=0.13.4", default-features = false, features = ["arithmetic", "alloc"] }
