[workspace]

[package]
name = "forum_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "forum_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Logos chain stack (matches whisper-wall, bumped where it cleanly bumps).
nssa        = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
nssa_core   = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
common      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1", features = ["client"] }
wallet      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }

# Local — the moderation library and shared wire types.
forum_core       = { path = "../../forum_core" }
forum_moderation = { path = "../../forum_moderation" }

# Serialization, transport.
borsh       = "1.5"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
hex         = "0.4"
tokio       = { version = "1", features = ["rt", "rt-multi-thread"] }

# Crypto for the in-process work the FFI needs (key gen on instance creation,
# share encryption, aggregation, etc.).
k256        = { version = "=0.13.4", features = ["arithmetic", "schnorr"] }
rand        = "0.8"
rand_core   = { version = "0.6", features = ["getrandom"] }
sha2        = "0.10"

# Optional dep on the methods crate (which embeds the RISC0 ELFs + image IDs).
# Behind the `with-proof` feature so the FFI builds without docker buildx —
# CI enables this once the guest binary is built.
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std", "client"], optional = true }
forum-methods = { path = "../../methods", optional = true }

bincode     = { version = "1.3", optional = true }

[features]
default = []
with-proof = ["dep:risc0-zkvm", "dep:forum-methods", "dep:bincode"]
